<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sheet_collapsed">

    <RelativeLayout
        android:id="@+id/rlSheetTwo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/llTwoExpanded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/sheet_two_title"
                android:textSize="18sp"
                android:letterSpacing="0.06"
                android:textColor="#171b54"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/sheet_two_msg"
                android:textSize="12sp"
                android:textColor="@color/grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/ivBank"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/bank"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/tvBankName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ivBank"
                    android:text="@string/bank_name"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvBankName"
                    android:layout_toEndOf="@id/ivBank"
                    android:text="@string/bank_acc_no"
                    android:textColor="@color/grey" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_tick"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_account"
                android:background="@drawable/bg_rounded_corners"
                android:layout_margin="30dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"/>

        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/tvBankAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/select_bank"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/sheet_text_color"
        android:paddingVertical="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/kyc_msg"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/sheet_text_color"
        android:paddingVertical="20dp"
        android:background="@drawable/bg_sheet_collapsed"/>

</androidx.constraintlayout.widget.ConstraintLayout>