<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:id="@+id/ivHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_question3"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:id="@+id/llHomeOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHelp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:background="@drawable/bg_home_rounded">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/main_title"
                android:textSize="18sp"
                android:letterSpacing="0.06"
                android:textColor="#171b54"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/main_msg"
                android:textSize="12sp"
                android:textColor="@color/grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/bg_amont_selector"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:id="@+id/ll_selector"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:background="@drawable/bg_circle"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_amount"
                        android:layout_gravity="center"
                        android:layout_marginTop="70dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_value"
                        android:textSize="22sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_amount_selector"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_below="@id/ll_selector"
                    android:layout_marginTop="20dp"
                    android:text="@string/main_selector_msg"/>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlHomeTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHelp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:visibility="gone"
            android:background="@drawable/bg_home_rounded">

            <TextView
                android:id="@+id/tvCreditAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_amount"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:textSize="10sp"
                android:textColor="@color/light_grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_value"
                android:layout_below="@id/tvCreditAmount"
                android:layout_marginStart="30dp"
                android:textSize="16sp"
                android:textColor="@color/light_grey"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_down"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"/>


        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_sheet_one"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:visibility="visible"
        app:behavior_hideable="false"
        app:behavior_peekHeight="60dp"
        app:layout_behavior="com.example.demo.DragLockBottomSheetBehavior">

        <include layout="@layout/bottom_sheet_1" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>